// Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.ledger.api.v1;


option java_outer_classname = "LedgerOffsetOuterClass";
option java_package = "com.digitalasset.ledger.api.v1";

// Describes a specific point on the ledger.
message LedgerOffset {

  oneof value {
    // Absolute values are acquired by reading the transactions in the stream.
    // The offsets can be compared. The format may vary between implementations.
    // It is either a string representing an ever-increasing integer, or
    // a composite string containing ``<block-hash>-<block-height>-<event-id>``; ordering
    // requires comparing numerical values of the second, then the third element.
    string absolute = 1;
    LedgerBoundary boundary = 2;
  }

  enum LedgerBoundary {
    // Refers to the first transaction.
    LEDGER_BEGIN = 0;

    // Refers to the currently last transaction, which is a moving target.
    LEDGER_END = 1;
  }
}
